[workspace]
members = ["crates/svm-builds", "crates/svm-rs"]
resolver = "2"

[workspace.package]
version = "0.5.7"
edition = "2021"
rust-version = "1.80"
authors = [
    "Rohit Narurkar <rohit.narurkar@protonmail.com>",
    "Matthias Seitz <matthias.seitz@outlook.de>",
    "DaniPopes <57450786+DaniPopes@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alloy-rs/svm-rs"
homepage = "https://github.com/alloy-rs/svm-rs"

[workspace.dependencies]
svm = { package = "svm-rs", version = "0.5.7", path = "crates/svm-rs", default-features = false }

hex = { package = "const-hex", version = "1.10" }
semver = "1"
serde = "1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["socks"] }
