[workspace]
members = ["crates/svm-builds", "crates/svm-rs"]
resolver = "2"

[workspace.package]
version = "0.5.17"
edition = "2021"
rust-version = "1.81"
authors = [
    "Rohit Narurkar <rohit.narurkar@protonmail.com>",
    "Matthias Seitz <matthias.seitz@outlook.de>",
    "DaniPopes <57450786+DaniPopes@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alloy-rs/svm-rs"
homepage = "https://github.com/alloy-rs/svm-rs"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
missing-const-for-fn = "warn"
needless-return = "allow"

[workspace.lints.rust]
# missing-copy-implementations = "warn"
# missing-debug-implementations = "warn"
# missing-docs = "warn"
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
svm = { package = "svm-rs", version = "0.5.17", path = "crates/svm-rs", default-features = false }

hex = { package = "const-hex", version = "1.10" }
semver = "1"
serde = "1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["socks"] }

[profile.release]
lto = "fat"
debug = 0
strip = "debuginfo"
codegen-units = 1
