[package]
name = "svm-rs-builds"
version = "0.1.8"
edition = "2021"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>", "Rohit Narurkar <rohit.narurkar@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Solidity-Compiler (Solc) builds.
"""
readme = "../README.md"
repository = "https://github.com/roynalnaruto/svm-rs"
homepage = "https://github.com/roynalnaruto/svm-rs"
build = "build.rs"

[build-dependencies]
build_const = "0.2.2"
svm = { package = "svm-rs", version = "0.2.16", path = "..", features = ["blocking"]}
semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }
hex = "0.4.3"
serde_json = "1.0.79"

[dependencies]
build_const = "0.2.2"
hex = "0.4.3"
semver = { version = "1.0.4", default-features = false, features = ["std", "serde"] }

[features]
# helper feature to block network access
_offline = []

[package.metadata.docs.rs]
# network access is blocked during builds
features = ["_offline"]
