[package]
name = "svm-rs-builds"
description = "Solidity compiler builds"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[build-dependencies]
svm = { package = "svm-rs", path = "../svm-rs", version = "0.3.5", default-features = false, features = [
    "blocking",
    "rustls",
] }

build_const = "0.2"
hex = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde_json = "1.0"

[dependencies]
build_const = "0.2"
hex = "0.4"
semver = { version = "1.0", features = ["serde"] }

[features]
# helper feature to block network access
_offline = []

[package.metadata.docs.rs]
# network access is blocked during builds
features = ["_offline"]
