[package]
name = "svm-rs-builds"
description = "Solidity compiler builds"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[build-dependencies]
svm = { workspace = true, default-features = false, features = ["blocking", "rustls"] }

build_const = "0.2"
hex.workspace = true
semver = { workspace = true, features = ["serde"] }
serde_json.workspace = true

[dependencies]
build_const = "0.2"
hex.workspace = true
semver = { workspace = true, features = ["serde"] }

[features]
# helper feature to block network access
_offline = []

[package.metadata.docs.rs]
# network access is blocked during builds
features = ["_offline"]
