[package]
name = "svm-rs"
description = "Solidity compiler version manager"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "svm_lib"
path = "src/lib.rs"

[[bin]]
name = "svm"
path = "src/bin/svm-bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "solc"
path = "src/bin/solc/main.rs"
required-features = ["solc"]

[dependencies]
fs2 = "0.4"
hex = "0.4"
dirs = "5.0"
once_cell = "1.17"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
url = "2.3"

# CLI
anyhow = { version = "1.0", optional = true }
clap = { version = "4.2", features = ["derive"], optional = true }
console = { version = "0.15", default-features = false, optional = true }
dialoguer = { version = "0.10", default-features = false, optional = true }
indicatif = { version = "0.17", default-features = false, optional = true }
itertools = { version = "0.10", optional = true }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
zip = "0.6"

[build-dependencies]
dirs = "5.0"

[dev-dependencies]
rand = "0.8"
tempfile = "3.5"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls", "cli", "solc"]

# lib
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
blocking = ["reqwest/blocking"]

# bin
cli = ["anyhow", "clap", "console", "dialoguer", "indicatif", "itertools", "tokio"]
solc = ["anyhow"]

# deprecated
sha2-asm = []
