[package]
name = "svm-rs"
version = "0.3.5"
edition = "2021"
rust-version = "1.65"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/roynalnaruto/svm-rs"
homepage = "https://github.com/roynalnaruto/svm-rs"
description = "Solidity compiler Version Manager"

[lib]
name = "svm"

[[bin]]
name = "svm"
path = "src/bin/svm-bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "solc"
path = "src/bin/solc/main.rs"
required-features = ["solc"]

[build-dependencies]
vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }

[dependencies]
fs4 = "0.7"
hex.workspace = true
dirs = "5.0"
once_cell = "1.17"
reqwest = { workspace = true, default-features = false, features = ["json"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
thiserror = "1.0"
url = "2.5"

# CLI
anyhow = { version = "1.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
console = { version = "0.15", default-features = false, optional = true }
dialoguer = { version = "0.11", default-features = false, optional = true }
indicatif = { version = "0.17", default-features = false, optional = true }
itertools = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
zip = "0.6"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls", "cli", "solc"]

# lib
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
blocking = ["reqwest/blocking"]

# bin
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:console",
    "dep:dialoguer",
    "dep:indicatif",
    "dep:itertools",
    "dep:tokio",
    "dep:vergen",
]
solc = ["dep:anyhow"]
